# af-termination

./: .gitignore  README.md  pyproject.toml  run.sh
af-termination/edge/: README.md
af-termination/edge/arduino/af_termination/: af_termination.ino  model.cpp
af-termination/edge/arduino/master/: master.ino
af-termination/edge/esp/esp-slave/: esp-slave.ino
af-termination/edge/esp/slave/: slave.ino
af-termination/neural-network/: README.md  prepare-dataset.py  train.ipynb  train_model.py
af-termination/neural-network/models/: af_model.tflite  model_data.cc  model_data_80.cc  model_sf_12.h5  model_sf_12.tflite  model_sf_32_80.h5  model_sf_32_80.tflite  my_h5_model.h5
neural-network/: prepare-dataset.py
