[tool.poetry]
name = "af-termination"
version = "0.1.0"
description = ""
authors = ["Piotr Baryczkowski"]
readme = "README.md"
packages = [{include = "af_termination"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
pandas = "^1.5.3"
wfdb = "^4.1.0"
tensorflow = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
